# dvmn_verbs_play_bot

./: .gitignore  README.md  dialog_flow.py  dialogflow.py  learn_dialogflow.py  logs.py  main.py  pyproject.toml  ruff.toml  tg_bot.py  vk_bot.py
bots/: tg.py
bots/vk/: __init__.py  bot.py  http.py  models.py
config/: settings.py
